--- a/pengeluaran.html
+++ b/pengeluaran.html
@@ -3,115 +3,278 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Form Produk & Harga</title>
+  <title>Catatan Pengeluaran</title>
 
   <!-- Font Awesome CDN for icons -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-papb2+MjXo6O3bMNhKnZOG4v2GmT2vLRq3xW20dHo9QAfX3tCv8UllR5tg2Q8TTG6lwp4SvvRmK9A93yP+U6iw=="
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f4f8;
+      background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+      margin: 0;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      padding: 10px;
+      padding: 20px;
+      color: #1c1f34;
     }
     .container {
-      background: white;
-      padding: 25px 30px;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      background: #ffffffdd;
+      padding: 30px 35px 40px;
+      border-radius: 15px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.1);
       width: 100%;
-      max-width: 360px;
+      max-width: 420px;
       text-align: center;
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255,255,255,0.4);
+    }
+    h1 {
+      font-weight: 700;
+      font-size: 2.3rem;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+      color: #344767;
+      text-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
+      flex-wrap: wrap;
+    }
+    h1 i {
+      color: #4a90e2;
+      font-size: 2.8rem;
     }
     h2 {
-      margin-bottom: 20px;
-      color: #333;
+      font-weight: 600;
+      font-size: 1.1rem;
+      margin-bottom: 25px;
+      color: #627aad;
+      letter-spacing: 0.04em;
+      font-style: italic;
     }
     form {
       display: flex;
-      gap: 10px;
+      gap: 15px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
     input[type="text"] {
-      flex: 1;
-      padding: 10px 15px;
-      font-size: 16px;
-      border: 2px solid #007bff;
-      border-radius: 6px;
-      transition: border-color 0.3s ease;
+      flex: 1 1 220px;
+      padding: 12px 18px;
+      font-size: 1.1rem;
+      border: 2px solid #4a90e2;
+      border-radius: 10px;
+      transition: all 0.3s ease;
+      box-shadow: inset 0 1px 4px rgba(74,144,226,0.3);
+      color: #344767;
+      font-weight: 600;
+      min-width: 150px;
+    }
+    input[type="text"]::placeholder {
+      color: #a0aec0;
+      font-style: italic;
     }
     input[type="text"]:focus {
       outline: none;
-      border-color: #0056b3;
-      box-shadow: 0 0 6px #0056b3;
+      border-color: #2c54b3;
+      box-shadow: 0 0 10px #2c54b3aa;
+      background-color: #e8f0fe;
+      color: #1a202c;
     }
     button {
-      background-color: #007bff;
+      background-color: #4a90e2;
       border: none;
-      padding: 0 18px;
-      border-radius: 6px;
+      padding: 0 22px;
+      border-radius: 10px;
       cursor: pointer;
       color: white;
-      font-size: 18px;
+      font-size: 1.2rem;
+      font-weight: 700;
       display: flex;
       align-items: center;
       gap: 8px;
       transition: background-color 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 6px 12px rgba(74,144,226,0.5);
+      flex-shrink: 0;
+      height: 44px;
+      justify-content: center;
     }
     button:hover {
-      background-color: #0056b3;
-      transform: scale(1.05);
+      background-color: #2c54b3;
+      transform: scale(1.06);
+      box-shadow: 0 8px 18px rgba(44,84,179,0.7);
     }
     button:active {
       transform: scale(0.95);
+      box-shadow: 0 4px 10px rgba(44,84,179,0.6);
+    }
+    #notification {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%) translateY(-20px);
+      background-color: #fff;
+      color: #333;
+      padding: 15px 28px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      font-size: 1.1rem;
+      font-weight: 700;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      z-index: 9999;
+      min-width: 320px;
+      max-width: 90vw;
+    }
+    #notification.show {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateX(-50%) translateY(0);
+    }
+    #notification.success {
+      border-left: 6px solid #28a745;
+      color: #28a745;
+    }
+    #notification.error {
+      border-left: 6px solid #dc3545;
+      color: #dc3545;
+    }
+    #notification i {
+      font-size: 26px;
+    }
+    #notification button.close-btn {
+      margin-left: auto;
+      background: transparent;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: inherit;
+      padding: 0;
+      line-height: 1;
+      transition: color 0.3s ease;
+    }
+    #notification button.close-btn:hover {
+      color: #999;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.8rem;
+      }
+      h1 i {
+        font-size: 2.2rem;
+      }
+      form {
+        flex-direction: column;
+        gap: 18px;
+      }
+      input[type="text"] {
+        flex: 1 1 100%;
+        min-width: unset;
+        font-size: 1rem;
+      }
+      button {
+        width: 100%;
+        padding: 12px 0;
+        font-size: 1.1rem;
+        height: auto;
+        justify-content: center;
+      }
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h2><i class="fa-solid fa-cart-plus"></i> Input Produk & Harga</h2>
+    <h1>
+      <i class="fa-solid fa-receipt"></i> Catatan Pengeluaran
+    </h1>
+    <h2>Input Produk & Harga</h2>
+
     <form id="formProduk" autocomplete="off">
       <input
         type="text"
         name="produk"
         placeholder="Misal: sepeda 1000k"
         required
-        aria-label="Input produk dan harga"
+        autocomplete="off"
       />
-      <button type="submit" aria-label="Kirim data">
+      <button type="submit">
         <i class="fa-solid fa-paper-plane"></i> Kirim
       </button>
     </form>
   </div>
 
+  <div id="notification" role="alert" aria-live="assertive">
+    <i></i>
+    <span></span>
+    <button class="close-btn" aria-label="Tutup notifikasi">&times;</button>
+  </div>
+
   <script>
-    document.getElementById("formProduk").addEventListener("submit", function (e) {
+    const form = document.getElementById("formProduk");
+    const notification = document.getElementById("notification");
+    const notifIcon = notification.querySelector("i");
+    const notifText = notification.querySelector("span");
+    const closeBtn = notification.querySelector(".close-btn");
+
+    function showNotification(type, message) {
+      notifText.textContent = message;
+      notification.className = ""; // reset
+      notification.classList.add(type, "show");
+      if (type === "success") {
+        notifIcon.className = "fa-solid fa-circle-check";
+      } else if (type === "error") {
+        notifIcon.className = "fa-solid fa-circle-xmark";
+      }
+      // Auto hide after 3s
+      setTimeout(() => {
+        notification.classList.remove("show");
+      }, 3000);
+    }
+
+    closeBtn.addEventListener("click", () => {
+      notification.classList.remove("show");
+    });
+
+    form.addEventListener("submit", function (e) {
       e.preventDefault();
       const formData = new FormData(this);
 
-      fetch("https://script.google.com/macros/s/AKfycbwBQxPCVKPqmQ0sWglDQR8CiZ8qnpD58AtCra0ORhxOa57SBRqskWG9BlwoP8GLEtdApA/exec", {
-        method: "POST",
-        mode: "no-cors",  // penting supaya gak kena CORS error
-        body: formData,
-      })
-      .then(() => {
-        alert("✅ Data berhasil dikirim!");
-        this.reset();
-      })
-      .catch(err => alert("❌ Gagal kirim data: " + err));
+      fetch(
+        "https://script.google.com/macros/s/AKfycbwBQxPCVKPqmQ0sWglDQR8CiZ8qnpD58AtCra0ORhxOa57SBRqskWG9BlwoP8GLEtdApA/exec",
+        {
+          method: "POST",
+          body: formData,
+        }
+      )
+        .then((res) => res.text())
+        .then(() => {
+          showNotification("success", "Data berhasil dikirim!");
+          form.reset();
+        })
+        .catch((err) => {
+          showNotification("error", "Gagal kirim data: " + err.message);
+        });
     });
   </script>
-
 </body>
 </html>
